samples/_failures_safe/1761788544_3ae74b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1bc8df6.c: In function ‘main’:
./samples/SAFE/__tmp_b1bc8df6.c:172:9: error: expected expression at end of input
  172 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_b1bc8df6.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1bc8df6.c:172:9: error: expected declaration or statement at end of input
